working on the project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/Ecommerce?useSSL = false
+spring.datasource.url=jdbc:mariadb://localhost:3306/BursaryDB?useSSL = false
 spring.datasource.username=bree
 spring.datasource.password=bree004!!
 
